# Consolet

./: .gitignore  CMakeLists.txt  README.md
assets/scripts/: coverage.sh  debug_build.sh
assets/sql/: createDB.sql  dropTables.sql
src/: CMakeLists.txt
src/chat/: chat.cpp  chat.hpp  chat_type.hpp
src/client/: CMakeLists.txt  client  client.cpp  client.hpp  main.cpp
src/client/client_session/: client_session.cpp  client_session.hpp
src/client/ui/: ui.hpp
src/command/: command.cpp  command.hpp
src/db/: db.cpp  db.hpp
src/message/: message.cpp  message.hpp
src/server/: CMakeLists.txt  main.cpp  server  server.cpp  server.hpp
src/server/server_session/: server_session.cpp  server_session.hpp
src/server/session/: session.cpp  session.hpp
src/session/: session.hpp
src/usr/: hash.cpp  user.cpp  user.hpp
tests/: CMakeLists.txt  db_test.cpp
